<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView2"
        style="@style/MarheyBold20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/win_combo"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        android:layout_marginHorizontal="30dp"
        app:cardUseCompatPadding="true"
        android:outlineSpotShadowColor="@color/white"
        android:outlineAmbientShadowColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnClose"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView2"
        app:strokeWidth="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ivFirst"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/iv_dice" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/MarheyBold20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/x2_your_bet"
                    android:textColor="#510C5A" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ivSecond"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/iv_bell" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/MarheyBold20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/x5_your_bet"
                    android:textColor="#510C5A" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ivThird"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/iv_7" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/MarheyBold20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/x7_your_bet"
                    android:textColor="#510C5A" />
            </LinearLayout>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnClose"
        style="@style/MaterialButtonMarheyBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>